--- a/6/estilo.css
+++ b/6/estilo.css
@@ -3,9 +3,49 @@
     margin: 0;
 }
 #cabezal{
-    background-color:gray;
-    padding: 15px;
+    background-color:#F7F7F7;
+    border-bottom: 1px solid #E2E2E2;
+    margin-bottom: 10px;
     width: 100%;
+    overflow: hidden;
+}
+#izq img{
+    width: 90px;
+    display: inline-block;
+    vertical-align: top;
+}
+#izq{
+    margin-left: 50px;
+    float: left;
+}
+.myButton{
+    height: 25px;
+    margin-top: 20px;    
+    width: 70px;
+}
+#buscarTxt{
+    display: inline-block;
+    vertical-align: top;
+    margin-top: 15px;
+    margin-left: 75px;
+    height: 27px;
+    width: 500px;
+}
+#der{
+    float: right;
+    font-family: arial;
+    color: #474747;
+    margin-right: 75px;
+    margin-top: 10px;
+}
+#der img{
+    width: 40px;
+    float: right;
+}
+#username{
+    float: left;
+    margin-top: 10px;
+    margin-right: 5px;
 }
 #sidebar{
     background-color:red;
